--- a/Lab_4_html.html
+++ b/Lab_4_html.html
@@ -1,8 +1,8 @@
 <html> 
 <form action="/cgi-bin/radio.py" method="POST">
-  <input type="radio" name="option" value="LED 1" checked> option A <br>
-  <input type="radio" name="option" value="LED 2"> option B <br>
-  <input type="radio" name="option" value="LED 3"> option C <br>
+  <input type="radio" name="option" value="1" checked> LED 1 <br>
+  <input type="radio" name="option" value="2"> LED 2 <br>
+  <input type="radio" name="option" value="3"> LED 3 <br>
   <input type="submit" value="Submit">
 </form>
 </html>
