--- a/Lab_4_html.html
+++ b/Lab_4_html.html
@@ -1,5 +1,5 @@
 <html> 
-<form action="/cgi-bin/radio.py" method="POST">
+<form action="/cgi-bin/Lab_4_cgi.py" method="POST">
   <input type="radio" name="option" value="1" checked> LED 1 <br>
   <input type="radio" name="option" value="2"> LED 2 <br>
   <input type="radio" name="option" value="3"> LED 3 <br>
@@ -8,7 +8,7 @@
 </html>
 
 <html> 
-<form action="/cgi-bin/range.py" method="POST">
+<form action="/cgi-bin/Lab_4_cgi.py" method="POST">
   <input type="range" name="slider" min ="0" max="100" value ="50"/><br>
   <input type="submit" value="Submit">
 </form>
