--- a/Lab4html.html
+++ b/Lab4html.html
@@ -1,5 +1,5 @@
 <html> 
-<form action="/cgi-bin/Lab_4_cgi.py" method="POST">
+<form action="/cgi-bin/Lab4cgi.py" method="POST">
   <input type="radio" name="option" value="1" checked> LED 1 <br>
   <input type="radio" name="option" value="2"> LED 2 <br>
   <input type="radio" name="option" value="3"> LED 3 <br>
