added other pwms

--- a/Lab4html.html
+++ b/Lab4html.html
@@ -1,8 +1,8 @@
 <html> 
 <form action="/cgi-bin/Lab4cgi.py" method="POST">
-  <input type="radio" name="option" value="LED 1" checked> LED 1 <br>
-  <input type="radio" name="option" value="LED 2"> LED 2 <br>
-  <input type="radio" name="option" value="LED 3"> LED 3 <br>
+  <input type="radio" name="option" value="1" checked> LED 1 <br>
+  <input type="radio" name="option" value="2"> LED 2 <br>
+  <input type="radio" name="option" value="3"> LED 3 <br>
   <input type="range" name="slider" min ="0" max="100" value ="50"/><br>
   <input type="submit" value="Submit">
 </form>
