--- a/Lab4html.html
+++ b/Lab4html.html
@@ -5,7 +5,7 @@ Choose LED <br>
   <input type="radio" name="option" value="2"> LED 2 <br>
   <input type="radio" name="option" value="3"> LED 3 <br>
   Change brightness of chosen LED <br>
-  0% <input type="range" name="slider" min ="0" max="100" value ="50"/><br> 100%
+  0% <input type="range" name="slider" min ="0" max="100" value ="50"/> 100% <br>
   <input type="submit" value="Submit">
 </form>
 </html>
